--- a/config/.env
+++ b/config/.env
@@ -1,3 +1,5 @@
 PORT=8080
 
-DB_URI=mongodb://0.0.0.0:27017/Book
+# //DB_URI=mongodb://0.0.0.0:27017/Book
+
+DB_URI=mongodb+srv://Deepesh:XGNPUMKO9zVBtDOe@cluster0.1uv2sf1.mongodb.net/Book?retryWrites=true&w=majority
