--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
     "start": "node server"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.6.3",
+    "path": "^0.12.7"
+  }
 }
